--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
             font-weight: bold;
             margin-bottom: 30px;
         }
+        .layer-number{
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-top: 30px;
+        }
     </style>
 </head>
 
@@ -33,7 +38,16 @@
         </div>
     </div>
 
-    <div class="notation">
+    <div class="row">
+        <div class="col">
+            <div class="d-flex flex-column align-items-center">
+                <img src="./img/steps/front.png" alt="">
+                Front
+            </div>
+        </div>
+    </div>
+
+    <div class="notation d-non">
         <div class="row">
         </div>
     </div>
@@ -46,7 +60,7 @@
 
         const notationRow = document.querySelector('.notation .row');
         var templates = '';
-        ["R", "B", "F", "L", "D", "U"].forEach((name) => {
+        ["F", "R",  "U", "L", "D", "B"].forEach((name) => {
             for (let index = 0; index <= 1; index++) {
                 templates += `<div class="col-2">
                     <div class="d-flex flex-column align-items-center">
@@ -74,15 +88,22 @@
             ],
             2: [
                 {
-                    description: 'sposta a sinistra',
-                    initial_state: '1',
+                    description: 'sposta cubo centrale a destra',
+                    initial_state: '2',
                     moves: ["D'", "R'", "D'", "R", "D", "F", "D", "F'"],
                 },
-                // {
-                //     description: 'sposta a destra',
-                //     initial_state: '2',
-                //     moves: [],
-                // },
+                {
+                    description: 'sposta cubo centrale a sinistra',
+                    initial_state: '1',
+                    moves: ["D", "L", "D", "L'", "D'", "F'", "D'", "F"],
+                },
+            ],
+            3: [
+                {
+                    description: 'croce',
+                    initial_state: '3',
+                    moves: ["F", "R", "U", "R'", "U'", "F'"],
+                },
             ],
         };
         // Images are in ./img/moves/R.png ./img/moves/R'.png ./img/moves/F.png ./img/moves/F'.png etc.
@@ -103,9 +124,26 @@
             imageElement.src = `./img/steps/${stepData.initial_state}.png`;
             stepElement.appendChild(imageElement);
 
-            const movesElement = document.createElement('p');
-            movesElement.textContent = 'Moves: ' + stepData.moves.join(', ');
-            stepElement.appendChild(movesElement);
+            var moves = '';
+            for (let i = 0; i < stepData.moves.length; i++) {
+                let move = stepData.moves[i];
+
+                moves += `<div class="col-auto">
+                    <div class="d-flex flex-column align-items-center">
+                        <img src="./img/moves/${move}.png">  
+                        <div class="description">${move}</div>  
+                    </div>
+                </div>`;
+            }
+
+            const movesElement = document.createElement('div');
+            movesElement.innerHTML = moves;
+            const movesContainer = document.createElement('div');
+            movesElement.classList.add('row');
+            movesContainer.appendChild(movesElement);
+
+            stepElement.appendChild(movesContainer);
+
 
             return stepElement;
         }
@@ -114,7 +152,13 @@
         const stepsContainer = document.querySelector('.steps');
 
         // Iterate through layers and steps to create and append elements
-        for (const layer of Object.values(layers)) {
+        for (const key of Object.keys(layers)) {
+            var layer = layers[key]
+            // add layer number
+            let intermediateElement = document.createElement('div')
+            intermediateElement.classList.add('layer-number')
+            intermediateElement.innerHTML = 'Layer ' + key
+            stepsContainer.appendChild(intermediateElement)
             for (const stepData of layer) {
                 const stepElement = createStepElement(stepData);
                 stepsContainer.appendChild(stepElement);
