--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
                     initial_states: ['3','4', '5'],
                     moves: ["F", "R", "U", "R'", "U'", "F'"],
                 },
+                {
+                    description: 'posizionamento croce',
+                    initial_states: ['6'],
+                    moves: ["L'", "U'", "L", "U'", "L'", "U'", "U'", "L'"],
+                },
+                {
+                    description: 'posizionamento croce',
+                    initial_states: ['7'],
+                    moves: ["R", "U", "R'", "U", "R", "U", "U", "R'"],
+                },
             ],
         };
         // Images are in ./img/moves/R.png ./img/moves/R'.png ./img/moves/F.png ./img/moves/F'.png etc.
