--- a/index.html
+++ b/index.html
@@ -108,12 +108,27 @@
                 {
                     description: 'posizionamento croce',
                     initial_states: ['6'],
-                    moves: ["L'", "U'", "L", "U'", "L'", "U'", "U'", "L'"],
+                    moves: ["L'", "U'", "L", "U'", "L'", "U'", "U'", "L"],
                 },
                 {
                     description: 'posizionamento croce',
                     initial_states: ['7'],
                     moves: ["R", "U", "R'", "U", "R", "U", "U", "R'"],
+                },
+                {
+                    description: 'posizionamento angoli',
+                    initial_states: ['8'],
+                    moves: [],
+                },
+                {
+                    description: 'posizionamento angoli',
+                    initial_states: ['9'],
+                    moves: [],
+                },
+                {
+                    description: 'orientamento angoli',
+                    initial_states: ['10'],
+                    moves: [],
                 },
             ],
         };
